<resources>

    <!--Activity Toolbar Titles-->
    <string name="app_name">Tready</string>
    <string name="events_title">Events</string>
    <string name="settings_title">Settings</string>
    <string name="eventCaptureTitle">Event %s</string>
    <string name="editSelectionTitle">%s Selected</string>

    <!--Setup Activity strings-->
    <string name="check">Check</string>
    <string name="setupDescription">Before you can get started, you must enter the server endpoint
    that was setup when configuring your TreadyHub!</string>

    <!--Login Activity strings-->
    <string name="welcome">Welcome</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="loginErrorMsg">Unable to login. Please check your credentials.</string>
    <string name="loginFieldsBlankMessage">Username and Password fields cannot be empty</string>
    <string name="credentials">Remember credentials?</string>
    <string name="noEventsListViewMsg">No Events to display</string>
    <string name="authenticatingMsg">Authenticating…</string>

    <!--Event Activity strings-->
    <string name="noEventsSelectedMsg">No Events selected</string>
    <string name="noEventsToDeleteMsg">No Events to delete</string>
    <string name="deleteEventsPrompt">Delete %s Events?</string>
    <string name="eventDeleteSuccessMsg">%s Events deleted</string>
    <string name="errorDeletingEventsMsg">Error deleting Events</string>
    <string name="partialErrorDeleteEventsMsg">Error deleting %s Events</string>

    <!--Device Activity strings-->
    <string name="noDevicesListViewMsg">There are no Devices Synced</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="selectOrientation">Select orientation</string>
    <string name="important">Important</string>
    <string name="orientationResetMsg">Your device must be manually rebooted for the selected orientation to take effect.</string>
    <string name="deviceNameEmptyErrorMsg">Device name cannot be empty</string>
    <string name="allDevicesEnabledMsg">All devices enabled</string>
    <string name="allDevicesDisabledMsg">All devices disabled</string>
    <string name="newDeviceNameSameAsExistingMsg">The device name entered must be different from the current name</string>
    <string name="changeDeviceName">Change device name</string>
    <string name="orientationAlreadyApplied">Orientation already applied</string>
    <string name="editDeviceName">Edit Name</string>
    <string name="editDeviceOrientation">Edit Orientation</string>
    <string name="deviceName">Device Name:</string>
    <string name="ipAddress">IP Address:</string>
    <string name="orientation">Orientation:</string>
    <string name="lastContact">Last Contact:</string>

    <!--Webservice Callbacks-->
    <string name="networkErrorMsg">Network Error</string>
    <string name="serverTimeOutMsg">Server timed out, try again later</string>

    <!--Reauth Dialog Strings-->
    <string name="reauthDialogTitle">Session expired, login required</string>
    <string name="reauthDialogExit">Exit</string>

    <!--Common strings-->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirmationMessage">Are you sure?</string>
    <string name="permissionDenied">Permission Denied</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="timeStarted">Time Started</string>
    <string name="timeEnded">Time Ended</string>
    <string name="exitApp">Exit App?</string>

    <string name="durationFieldDescription">Duration:</string>
    <string name="timeFieldDescription">Time:</string>
    <string name="dateFieldDescription">Date:</string>
    <string name="selectAll">Select All</string>
    <string name="durationSeconds">%s Seconds</string>

    <!-- Menu item Strings-->
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="refresh">Refresh</string>

    <!--Settings strings-->
    <string name="signOutMsg">Sign out on device</string>

    <!--Preferences Titles and Summaries-->
    <string name="account">Account</string>
    <string name="alerts">Alerts</string>
    <string name="signOut">Sign Out</string>
    <string name="signOutSummary">Sign out on this device</string>
    <string name="permissions">Permissions</string>
    <string name="notifications">Notifications</string>
    <string name="notificationSummary">Receive notifications of capture alerts</string>
    <string name="serviceEndpoint">Service Endpoint</string>
    <string name="serviceEndpointSummary">Configure service endpoint</string>
    <string name="devices">My Devices</string>
    <string name="devicesSummary">View your devices</string>
    <string name="piHub">Pi Hub</string>
    <string name="piHubSummary">View your Pi Hub\'s status</string>
    <string name="storage">Storage</string>
    <string name="storageSummary">Permission to save event captures to device storage</string>

    <!--Preferences String Keys-->
    <string name="PREF_NOTIFICATION_KEY">notification_key</string>
    <string name="PREF_SERVICE_ENDPOINT_KEY">service_endpoint_key</string>
    <string name="PREF_MY_DEVICES_KEY">my_devices_key</string>
    <string name="PREF_PI_HUB_KEY">pi_hub_key</string>
    <string name="PREF_STORAGE_KEY">storage_key</string>
    <string name="PREF_CHANGE_USERNAME_KEY">change_username_key</string>
    <string name="PREF_CHANGE_PASSWORD_KEY">change_password_key</string>
    <string name="PREF_SIGN_OUT_KEY">sign_out_key</string>

    <string-array name="deviceOrientationChoices">
        <item>landscapePowerUp</item>
        <item>landscapePowerDown</item>
        <item>portraitUpsideDown</item>
        <item>portrait</item>
    </string-array>

</resources>